user options details
